--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
+        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
     </properties>
 
     <dependencies>
@@ -53,9 +54,6 @@
                     <goals>
                         <goal>repackage</goal>
                     </goals>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
                     </execution>
                 </executions>
             </plugin>
