[maven-release-plugin] prepare release sfg-pet-clinic-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 
 	<scm>
 		<developerConnection>
-			scm:git:git@github.com:miroslavkomar/sfg-pet-clinic.git
+			scm:git:https://github.com/miroslavkomar/sfg-pet-clinic.git
 		</developerConnection>
 	  <tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
