[maven-release-plugin] prepare release sfg-pet-clinic-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,10 @@
 	</build>
 
 	<scm>
-		<connection>
+		<developerConnection>
 			scm:ssh:git@github.com:miroslavkomar/sfg-pet-clinic.git
-		</connection>
-	  <tag>sfg-pet-clinic-0.0.1</tag>
+		</developerConnection>
+	  <tag>HEAD</tag>
   </scm>
 
 </project>
