[maven-release-plugin] prepare release sfg-pet-clinic-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,8 @@
 
 	<scm>
 		<developerConnection>
-			scm:ssh:git@github.com:miroslavkomar/sfg-pet-clinic.git
+			scm:git:git@github.com:miroslavkomar/sfg-pet-clinic.git
 		</developerConnection>
-	  <tag>HEAD</tag>
   </scm>
 
 </project>
