--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
 	<scm>
 		<developerConnection>
-			scm:git:ssh@github.com:miroslavkomar/sfg-pet-clinic.git
+			scm:git:https://github.com/miroslavkomar/sfg-pet-clinic.git
 		</developerConnection>
 		<tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
