--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,10 @@
 	</build>
 
 	<scm>
-		<connection>
+		<developerConnection>
 			scm:git:https://github.com/miroslavkomar/sfg-pet-clinic.git
-		</connection>
+		</developerConnection>
+		<url>https://github.com/miroslavkomar/sfg-pet-clinic</url>
 		<tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
 
