refactoring to multimoudle maven project fixes.

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<name>sfg-pet-clinic</name>
 	<description>SFG Pet Clinic Project</description>
@@ -42,12 +42,10 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<scm>
 		<developerConnection>
 			scm:git:https://github.com/miroslavkomar/sfg-pet-clinic.git
 		</developerConnection>
-		<tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
 
 </project>
