--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<name>sfg-pet-clinic</name>
 	<description>SFG Pet Clinic Project</description>
@@ -46,6 +46,7 @@
 		<developerConnection>
 			scm:git:https://github.com/miroslavkomar/sfg-pet-clinic.git
 		</developerConnection>
+    <tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
 
 </project>
